# PseudoNix

./: .gitignore  .gitlab-ci.yml  App.h  CMakeLists.txt  README.md  conanfile.py  example1.cpp  example2.cpp  example3.cpp  example4.cpp  main.cpp  terminal.cpp  terminal.html
.github/workflows/: cmake-multi-platform.yml
archive/: README.md
cmake/: extras.cmake
examples/: App.h  common_setup.h  example1.cpp  example2.cpp  example3.cpp  example4.cpp  js_terminal.cpp  main.cpp  terminal.cpp
include/PseudoLinux/: ImGuiTerminal.h  shell2.h
include/PseudoNix/: ArchiveMount.h  ArchiveMount1.h  ArchiveMount2.h  FileSystem.h  FileSystem1.h  FileSystem2.h  FileSystemHelpers.h  FileSystemHostMount.h  FileSystemMount.h  HostMount.h  ImGuiTerminal.h  Launcher.h  MiniLinux.h  ReaderWriterStream.h  Shell.h  Shell1.h  Shell2.h  System.h  defer.h  generator.h  helpers.h  sample_archive.h  shell2.h  task.h
include/PseudoNix/detail/: ArchiveMount2.h  FileSystem1.h  FileSystem2.h
include/ebash/: ImGuiConsoleWidget.h  ImGuiTerminal.h  Launcher.h  MiniLinux.h  ReaderWriterStream.h  SimpleScheduler.h  defer.h  shell.h  shell2.h  task.h
scripts/: blocking_test  if_statement
src/: README.md
src/exe/: CMakeLists.txt
src/headerOnly/: CMakeLists.txt
src/headerOnly/include/headerOnly/: header.h
src/headerOnly/test/: testMyLib.cpp
src/libA/: CMakeLists.txt
src/libA/include/libA/: header.h
src/libA/share/: readme.md
src/libA/src/: lib.cpp
src/libA/test/: testMyLib.cpp
test/: CMakeLists.txt  unit-FileSystem.cpp  unit-FileSystem2.cpp  unit-IOStreams.cpp  unit-System.cpp  unit-archive.cpp  unit-archive2.cpp  unit-ast.cpp  unit-awaiters.cpp  unit-concurrentqueue.cpp  unit-private.cpp  unit-shell-advanced.cpp  unit-shell.cpp  unit-shell2.cpp  unit-streams.cpp
